--- a/Chris.html
+++ b/Chris.html
@@ -3,6 +3,18 @@
 		<title>Chris Park's list</title>
 	<link rel="stylesheet" type="test/css" href="style.css">
     </head>
+    /* Google analytics tracking code*/
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49097007-1', 'chriskpark.com');
+  ga('send', 'pageview');
+
+</script>
+    
 	<body>
 	<div id="bodywrapper">
 		<h1>Chris Park </h1>
