--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
     
 	<body>
 	<div id="bodywrapper">
-		<h1>Chris Park </h1>
+		<h1>Chris Kim Park </h1>
 		<div id="header">
 		<div id="navigation">
             <ul class = "numeric">
